# remory

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  INSTRUCTIONS.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.claude/agents/: architect.md  implementer.md  reviewer.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/: architecture.md  schemas.md
docs/adr/: 0001-fsync-on-darwin.md  0002-chat-vs-session-end-hook-raw-write-coordination.md  0003-wizard-commit-partial-failure-leave-as-is.md  0004-wizard-sigint-windows-best-effort.md  0005-claude-template-backups-retention.md  0006-wizard-claude-driven-interview.md  0007-session-end-hook-never-prints.md  0008-section-isolated-merges.md  0009-claude-cli-default-backend.md  0010-yaml-schemas-only.md  0011-bundled-prompts.md  0012-data-dir-outside-repo.md
docs/phases/: phase4-consolidated-plan.md  phase5-consolidated-plan.md  phase6-consolidated-plan.md  phase6-smoke-checklist.md  phase7-install-verification.md
src/remory/: __init__.py  __main__.py  atomic.py  claude_assets.py  config.py  locking.py  logging_setup.py  paths.py  raw.py  schema.py  state.py  templates.py  topic.py  topic_claude_md.py  transcripts.py  ui.py  wizard.py
tests/: conftest.py  test_smoke.py
tests/fakes/: __init__.py  fake_backend.py  fake_claude  lock_holder.py  scripted_input.py
tests/integration/: test_chat_flow.py  test_chat_flow_real_cli.py  test_chat_vs_session_end_dedup.py  test_doctor_e2e.py  test_e2e_chat_then_sleep.py  test_hooks_against_fake_claude.py  test_init_then_chat.py  test_session_end_hook_e2e.py  test_sleep_flow.py  test_wizard_e2e.py
tests/unit/: test_atomic.py  test_backends_base.py  test_chat_cmd.py  test_claude_assets_install.py  test_claude_assets_settings.py  test_claude_assets_template_version.py  test_claude_code_backend_chat.py  test_claude_code_backend_headless.py  test_cli_errors.py  test_config.py  test_data_templates_snapshot.py  test_docs_present.py  test_doctor_checks.py  test_doctor_claude_assets.py  test_emit_backup.py  test_fake_backend.py  test_hook_pre_tool_use.py  test_hook_session_end.py  test_init_cmd.py  test_init_refresh.py  test_locking.py  test_logging_setup.py  test_paths.py  test_prompts_snapshot.py  test_raw.py  test_schema.py  test_simple_commands.py  test_sleep_cmd.py  test_sleep_critique.py  test_sleep_extract.py  test_sleep_merge.py  test_sleep_orchestrator.py  test_state.py  test_stats_streak.py  (+16 more)
(+50 files in other folders)
