[project]
name = "remory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jens", email = "63923335+Linnk-GitHub@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.scripts]
remory = "remory:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]
