[project]
name = "remory"
version = "0.1.0"
description = "A second brain that actually remembers."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "jens", email = "63923335+Linnk-GitHub@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "tenacity>=9.1.4",
    "typer>=0.25.1",
]

[project.scripts]
remory = "remory:main"

[build-system]
requires = ["uv_build>=0.11.12,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff==0.15.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.ruff.format]
# Defaults: double quotes, 4-space indent, trailing commas where safe.

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
# Strictness deliberately split: src/ is strict; tests/ inherits the basic top-level mode.
# `strict` is a path/glob list (the pyright-native way to scope strictness); the
# executionEnvironments construct does not carry typeCheckingMode in this pyright version.
# Strict mode on test fixtures and fakes generates noise that obscures real signal
# (Mocks, dynamically-typed fixtures, parametrize indirection).
strict = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "real_cli: integration test that invokes the real `claude` CLI; opt-in via REMORY_REAL_CLI=1.",
]
